<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BulletZoneClient</string>
    <string name="action_settings">Settings</string>
    <string name="up">FORWARDS</string>
    <string name="down">BACKWARDS</string>
    <string name="right">TURN RIGHT</string>
    <string name="left">TURN LEFT</string>
    <string name="fire">FIRE!</string>
    <string name="join">JOIN</string>
    <string name="leave">LEAVE</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="default_user">Guest</string>
    <string name="default_credits">Credits: 0</string>
    <string name="switch_builder">Switch To Builder</string>
    <string name="switch_tank">Switch To Tank</string>
    <string name="switch_soldier">Switch To Solder</string>
    <string name="button_buildWall">Build Wall</string>
    <string name="button_buildRoad">Build Road</string>
    <string name="button_buildDock">Build Dock</string>
    <string name="button_dismantle">Wreck</string>
</resources>