<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:background="#FF000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClientActivity">

    <LinearLayout
        android:id="@+id/innerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@color/color_selector"
                android:text="Login"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/buttonLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/color_selector"
                android:text="Leave"
                android:textColor="@color/text_color" />
        </RelativeLayout>


        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:numColumns="16"
            tools:listitem="@layout/field_item" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/buttonLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/left"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/buttonUp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonLeft"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_background"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/up"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/buttonRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/right"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/buttonDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonRight"
                android:layout_alignParentRight="true"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_background"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/down"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/buttonFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonUp"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/buttonLeft"
                android:background="@drawable/button_background"
                android:text="@string/fire"
                android:textColor="@color/text_color" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
